02/05/2020
-----------
+ scrolling terminal
+ sleep function in asm (not functional)