@@ -1,3 +1,5 @@
-kernel/build/kernel.elf
+build/kernel.elf
 .vscode/**
 kernel/src/*.o
+CMakeLists.txt
+kernel/src/ansi.c
