@@ -4,11 +4,11 @@ Learning project about creating a kernel/os
 ## Instructions
 ### Requirements
 You must install Nasm assembler and Qemu emulator. \
-Then you must recompile your own GCC cross-compiler: as explained here : \
+Then you must recompile your own GCC cross-compiler, as explained here : \
 https://wiki.osdev.org/GCC_Cross-Compiler
 ### Usage
 #### Kernel
-Go to 'kernel' directory and run : \
+Go to 'kernel' directory and run :
 ```
 make
 make run
@@ -23,4 +23,5 @@ It calls nasm and runs the binary inside QEMU.
 
 ## Resources
 The OSDev Wiki : https://wiki.osdev.org/ \
-The Cfenollosa tutorial : https://github.com/cfenollosa/os-tutorial
+The Cfenollosa tutorial : https://github.com/cfenollosa/os-tutorial \
+Little OS book : http://littleosbook.github.io
