@@ -1,0 +1,10 @@
+/**
+ * Author: RomainGsd
+ * Date: 24/05/2020
+ */
+
+#pragma once
+
+#include "kernel.h"
+
+int	detect_ansi(char *str);
