@@ -1,12 +1,14 @@
 /**
  * Author: RomainGsd
  * Date: 29/04/2020
- */
+*/
 
 #pragma once
 
 #include <stddef.h>
 #include <stdint.h>
+#include "string.h"
 #include "asm.h"
-#include "term.h"
+#include "ansi.h"
+#include "tty.h"
 #include "colors.h"
