@@ -1,0 +1,11 @@
+/**
+ * Author: RomainGsd
+ * Date: 03/05/2020
+*/
+
+#pragma once
+
+#include <stddef.h>
+#include <stdint.h>
+
+extern size_t	strlen(const char *str);
